<resources>
    <string name="app_name">Grade ACE !</string>
    <string name="calculate_ogpa_effortlessly">Calculate OGPA Effortlessly with Grade ACE.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">SAVE</string>
    <string name="already_have_an_account"><u>Have an account ? Login.</u></string>
    <string name="does_not_have_an_account"><u>Don\'t have an account ? Sign up.</u></string>
    <string name="agree_to_terms_and_condition">I agree to terms and conditions of Grade ACE. Therefore declaring that my information will be stored for safety purposes.</string>
    <string name="login_all_caps_heading">LOGIN</string>
    <string name="Privacy_policy"><a href="https://drive.google.com/file/d/1ayPTzh_9EKUugo7l648y3M5TkFJBWnHi/view?usp=sharing">Privacy Policy</a></string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="login_in_your_account">Login in your account</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="add_OGPA">ADD OGPA</string>
    <string name="for_someone_else">For Someone Else</string>
    <string name="enter_theory_marks">Enter Theory Marks</string>
    <string name="enter_practical_marks">Enter Practical Marks</string>
    <string name="calculate">Calculate</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="report_error">Report Error</string>
    <string name="refresh">Refresh</string>
    <string name="ogpa_graph">OGPA Graph</string>
    <string name="bsc_agriculture">B.Sc AGRICULTURE</string>
    <string name="bsc_horticulture">B.Sc HORTICULTURE</string>
    <string name="btech_agriculture">B.Tech Agriculture Engineering</string>
    <string name="btech_agriculture_eng">B.Tech Agriculture</string>
    <string name="btech_agriculture_1">B.Tech Agriculture</string>
    <string name="btech_agriculture_2">Engineering</string>
    <string name="ogpa">OGPA</string>
    <string name="Semester">Semester</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="graph">Graph</string>
    <string name="overall">Overall</string>
    <string name="topper_tips">Topper Tips</string>
    <string name="change_language">Change Language</string>
    <string name="name">Name :- </string>
    <string name="passing_year">Passing Year :- </string>
    <string name="college_name">College Name :- </string>
    <string name="message">Message :- </string>
    <string name="semester">Semester :- </string>
    <string name="ogpa_total_ogpa">OGPA :- </string>
    <string name="graph_ogpa_error_message_1_fragment">Cannot set graph for single sem.</string>
    <string name="ogpa_message_1_fragment">Enter details for OGPA.</string>
    <string name="ogpa_message_2_fragment">You can not change this later.</string>
    <string name="ogpa_message_3_fragment">CONTINUE</string>
    <string name="ogpa_message_4_fragment">Select Semester</string>
    <string name="ogpa_message_5_fragment">User with same name and semester already exists.</string>
    <string name="ogpa_message_6_fragment">Cancel</string>
    <string name="bsc_agriculture_message_1">Share Topper Tips ?</string>
    <string name="bsc_agriculture_message_2">Since you have scored more than 8 OGPA would you like to share some tips with other agriculture students ?\nIf yes then please don\'t delete pre written text.</string>
    <string name="bsc_agriculture_message_3_no">No</string>
    <string name="bsc_agriculture_message_4_yes">Yes</string>
    <string name="bsc_agriculture_message_5">Marks more than 100 detected.</string>
    <string name="bsc_agriculture_message_6">Theory marks more than 100 detected.</string>
    <string name="bsc_agriculture_message_7">Theory marks more than 70 detected.</string>
    <string name="bsc_agriculture_message_8">Practical marks more than 50 detected.</string>
    <string name="bsc_agriculture_message_9">Practical marks more than 30 detected.</string>
    <string name="bsc_agriculture_message_10">New OGPA added successfully.</string>
    <string name="bsc_agriculture_message_11">OGPA : </string>
    <string name="bsc_agriculture_message_12">Enter all available fields.</string>
    <string name="sure_to_logout">Are you sure you want to Logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="refresh_loading">refresh</string>
    <string name="reset_password">Reset Password</string>


    <string name="enter_full_email_login">Enter your email to get reset link.</string>
    <string name="Send">Send</string>
    <string name="Invalid_email">Invalid email address.</string>
    <string name="Invalid_email_spaces">Email can not contain spaces</string>
    <string name="Invalid_password_spaces">Password can not contain spaces</string>
    <string name="Reset_link_sent">Reset link sent.</string>
    <string name="enter_all_fields">Enter all fields</string>
    <string name="email_contains_spaces">Email can not contains spaces</string>
    <string name="try_with_another_email">Please login/signup with another email.</string>
    <string name="Update_Available">Update Available</string>
    <string name="Update">Update</string>
    <string name="Topper_Tips">Topper Tips</string>
    <string name="I_comply">I comply</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="password_greater_then_8">Password must be greater than 8 characters</string>
    <string name="both_password_must_be_same">Both passwords must be same</string>
    <string name="name_greater_then_1">Name must be greater than 1 characters</string>
    <string name="I_Agree_sign_up">I Agree</string>
    <string name="I_not_Agree_sign_up">I Don\'t Agree</string>
    <string name="I_agree">I Comply that the app can some time show minor error while calculating OGPA(±0.10)</string>
    <string name="I_agree_terms_and_condition">Please agree to terms and conditions</string>
    <string name="Update_version">New version of the app is available we recommend updating the app.</string>


    <string name="english">English</string>
    <string name="hindi">हिंदी</string>


    <string name="resend_link">Resend Link</string>
    <string name="verification_email_sent">Verification email sent successfully.</string>
    <string name="verification_email_failed">Failed to send verification email.</string>
    <string name="resend_link_in_sec">Resend Link in </string>
    <string name="verification_email_sent_with_email_verification_request">Verification email sent successfully.\nPlease verify your email before logging in.</string>
    <string name="verification_email_failed_with_login_again_request">Failed to send verification email.\nPlease login again.</string>
    <string name="refresh_user_failed">Failed to refresh user.\nPlease login again.</string>
    <string name="calculator">Calculator</string>
    <string name="home">Home</string>
    <string name="pyq">PYQ</string>
    <string name="notes">Notes</string>
    <string name="change_password">Change Password</string>
    <string name="feedback">Feedback</string>
    <string name="bug">Bug</string>
    <string name="app_update">App Update</string>
    <string name="change_email">Change Email</string>
    <string name="pleaseWaitWhileThePdfIsBeingLoaded">Please wait while the Pdf is being loaded.</string>
    <string name="Calculate_your_Overall_Credit_Point_Average">Calculate your Overall Grade Point Average</string>
    <string name="viewInsights"><u>View Insights</u></string>
    <string name="ChangeEmail">Change Email</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="email_updated">Email updated successfully, please restart the app.</string>
    <string name="ChangePassword">Change Password</string>
    <string name="enter_new_password">Please enter your new password.</string>
    <string name="password_updated">Password updated successfully.</string>
    <string name="new_version_available">New Version Available</string>
    <string name="new_version_available_message">A new version of app is available please update now to continue using grade ace seamlessly.</string>
    <string name="update">Update</string>
    <string name="current_language">"Current Language: "</string>
    <string name="keep_trying_to_get_verification_email_untill_you_recive_a_email">Keep trying to get verification email untill you recive a email.</string>
    <string name="default_web_client_id_new">685729801545-kb50l42plcclo9k94aoi14d2h990kqta.apps.googleusercontent.com</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string-array name="languages">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
</resources>