<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/less_border_white"
    android:layout_height="wrap_content">
<TextView
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/name"
    android:textSize="@dimen/_14ssp"
    android:textAlignment="viewStart"
    style="@style/font_medium"
    android:textColor="@color/black"
    android:id="@+id/name_recycler"
    android:padding="@dimen/_5sdp"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/semester"
    android:textSize="@dimen/_13ssp"
    android:textAlignment="viewStart"
    android:textColor="@color/black"
    android:id="@+id/sem_recycler"
        style="@style/font_regular"
    android:padding="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ogpa_total_ogpa"
    android:textSize="@dimen/_13ssp"
    android:textAlignment="viewStart"
        style="@style/font_regular"
    android:textColor="@color/black"
    android:id="@+id/ogpa_recycler"
    android:padding="@dimen/_5sdp"
    android:singleLine="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ogpa_total_ogpa"
    android:textSize="@dimen/_10ssp"
    android:textAlignment="viewEnd"
    android:textColor="@color/black"
        style="@style/font_regular"
    android:id="@+id/ogpa_type"
    android:padding="@dimen/_5sdp"
    android:singleLine="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>
</LinearLayout>