<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/less_border_white"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textAlignment="viewStart"
        style="@style/font_medium"
        android:text="Name"
        android:textColor="@color/black"
        android:id="@+id/tv_name"
        android:padding="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        android:textSize="@dimen/_13ssp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:id="@+id/tv_semester"
        style="@style/font_regular"
        android:padding="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pyq"
        android:textSize="@dimen/_13ssp"
        android:textAlignment="viewStart"
        style="@style/font_regular"
        android:textColor="@color/black"
        android:id="@+id/tv_contains_pyq"
        android:padding="@dimen/_5sdp"
        android:singleLine="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="@dimen/_10ssp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        style="@style/font_regular"
        android:id="@+id/tv_user_message"
        android:padding="@dimen/_5sdp"
        android:singleLine="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>
</LinearLayout>
