<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bsc_Horticulture_tab">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:theme="@style/font_bold"
                style="@style/font_bold"
                app:title="--"
                android:background="@color/white"
                app:titleTextColor="@color/black"
                app:subtitleTextColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_bsc_agriculture"/>
            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                app:tabTextColor="@color/black"
                android:id="@+id/tablayout_bsc_agriculture"
                android:layout_height="wrap_content">
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/ogpa"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/overall"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/graph"/>
            </com.google.android.material.tabs.TabLayout>
            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="match_parent"
                android:id="@+id/viewpager"
                android:background="@color/white"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>