<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_all_caps_heading"
                    android:textAlignment="center"
                    android:textSize="@dimen/_28sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:textAlignment="center"
                    android:textSize="@dimen/_28sdp"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_in_your_account"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:autofillHints="emailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:hint="@string/enter_email"
                        android:textAlignment="viewStart"
                        android:textStyle="bold"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_18sdp" />
                    <EditText
                        android:inputType="textEmailAddress"
                        android:autofillHints="emailAddress"
                        android:id="@+id/email_information_login_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:background="@drawable/less_border_blue"
                        android:hint="@string/enter_email"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_18sdp" />
                    <TextView
                        android:autofillHints="emailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:hint="@string/enter_password"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_18sdp" />
                    <EditText
                        android:inputType="textPassword"
                        android:autofillHints="password"
                        android:id="@+id/password_information_login_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:background="@drawable/less_border_blue"
                        android:hint="@string/enter_password"
                        android:padding="@dimen/_7sdp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_18sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/forgot_password_login_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="@string/forgot_password"
                        android:textSize="@dimen/_12sdp"
                        android:textAlignment="center"
                        android:textColor="@color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login_at_login_page"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:background="@drawable/less_border_purple"
                        android:text="@string/login"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sign_up_at_login_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="@string/does_not_have_an_account"
                        android:textSize="@dimen/_12sdp"
                        android:textAlignment="center"
                        android:layout_marginBottom="@dimen/_50sdp"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>