<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_blue_to_white"
    android:layout_height="match_parent"
    tools:context=".newUiActivity.ChangeLanguage">

    <androidx.cardview.widget.CardView
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:background="@color/white"
            android:id="@+id/language_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/current_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_language"
                android:layout_marginBottom="16dp"/>

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/languages"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:padding="@dimen/_5sdp"
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/rounded_button_green"
                    android:textColor="@android:color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:padding="@dimen/_5sdp"
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@drawable/rounded_button_red"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
